# maxzadeh-com

./: README.md  app.py  database.py  models.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
attached_assets/: Pasted-Welcome-As-a-seasoned-executive-and-entrepreneur-I-specialize-in-transforming-organizations-through-1735101140454.txt
static/css/: styles.css
static/js/: main.js
templates/: index.html
